structural changes for run mcmc section

--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -444,7 +444,6 @@ sce_CD4_all <- SingleCellExperiment(
 altExp(sce_CD4_all, "spike-ins") <- SummarizedExperiment(
   assays = list(counts = spike_counts)
 )
-sce_CD4_all
 ```
 
 Throughout our analysis, we focus on naive and activated CD4^+^ T cells obtained 
@@ -478,7 +477,7 @@ spike-in counts and a low fraction of endogeneous counts
 (see Figure \@ref(fig:PerCellQC)).
 
 ```{r PerCellQC, fig.cap="Cell-level QC metrics. The total number of endogenous read-counts (excludes non-mapped and intronic reads) is plotted against the total number of detected genes (left) and the total number of spike-in read-counts (right)."}
-# Calculate per cell QC metrics
+# Calculate and plot per cell QC metrics
 sce_naive_active <- addPerCellQC(sce_naive_active, use_altexps = TRUE)
 p_cellQC1 <- plotColData(sce_naive_active, x = "sum", y = "detected") +
   xlab("Total engogenous reads per cell") +
@@ -504,7 +503,6 @@ p_stimulus <- plotColData(
   theme(
     legend.position = "bottom",
     axis.text.x = element_text(angle = 45, hjust = 1))
-
 p_batch <- plotColData(
     sce_naive_active,
     x = "sum",
@@ -545,21 +543,23 @@ multiplot(p_stimulus, p_batch, cols = 2)
 ```
 
 Following cell-specific QC, we also recommend to remove lowly expressed genes 
-for which the data contains limited information. 
+for which variability estimates are less reliable. 
 Here, we remove all genes that are not detected in at least 5 cells across both 
-experimental conditions or for which their average scran normalised read count 
-(across all cells) is below 1. 
+experimental conditions or for which their average read count (across all cells) 
+is below 1. 
 These thresholds need to be set specifically for each dataset, and 
 gene-specific quality metrics should always be examined, as suggested by the 
 [*OSCA*](https://osca.bioconductor.org/) Bioconductor workflow [@Amezquita2019].
 
-```{r gene-selection, fig.cap="Average expression for each gene is plotted against the number of cells in which that gene was detected. Dashed grey lines are shown at the thresholds below which genes are removed."}
+```{r gene-selection, fig.cap="Average read-count for each gene is plotted against the number of cells in which that gene was detected. Dashed grey lines are shown at the thresholds below which genes are removed."}
 # Calculate per gene QC metrics
 sce_naive_active <- addPerFeatureQC(sce_naive_active, exprs_values = "counts")
-## Remove genes with zero total counts across all cells
+# Remove genes with zero total counts across all cells
 sce_naive_active <- sce_naive_active[rowData(sce_naive_active)$detected != 0, ]
-# Transform 'detected' metadata into number of cells
-rowData(sce_naive_active)$detected_cells <- rowData(sce_naive_active)$detected * ncol(sce_naive_active) / 100
+# Transform 'detected' metadata into number of cells 
+rowData(sce_naive_active)$detected_cells <- 
+  rowData(sce_naive_active)$detected * ncol(sce_naive_active) / 100
+# Define inclusion criteria
 rowData(sce_naive_active)$include_gene <- rowData(sce_naive_active)$mean >= 1 &
   rowData(sce_naive_active)$detected_cells >= 5
   
@@ -577,8 +577,18 @@ plotRowData(
     axis.text.x = element_text(angle = 45, hjust = 1)) +
 geom_vline(xintercept = 5, linetype = "dashed", col = "grey60") +
 geom_hline(yintercept = 1, linetype = "dashed", col = "grey60")
-# Apply gene filter 
-sce_naive_active <- sce_naive_active[include_gene, ]
+# Apply inclusion criteria
+sce_naive_active <- sce_naive_active[rowData(sce_naive_active)$include_gene, ]
+```
+
+Subsequently we also remove spike-in molecules that were not captured
+through sequencing. 
+
+```{r spike-ins-present}
+# Find which spike-ins were captured through sequencing
+detected_spikes <- rowSums(assay(altExp(sce_naive_active, "spike-ins")) > 0) > 0
+## Remove spike-ins that are not present from matrix and SCE object
+altExp(sce_naive_active, "spike-ins") <- altExp(sce_naive_active)[detected_spikes, ]
 ```
 
 The final dataset used in subsequent analyses contains `r ncol(sce_naive_active)`
@@ -595,20 +605,6 @@ Separate `SingleCellExperiment` objects are created for each group of cells.
 sce_naive <- sce_naive_active[, sce_naive_active$Stimulus == "Unstimulated"]
 sce_active <- sce_naive_active[, sce_naive_active$Stimulus == "Active"]
 ```
-
-Given that some of the spike-in molecules were not observed in the sequencing
-data, we will remove these from the data before continuing.
-
-```{r spike-ins-present}
-## Select the ERCC spike-ins of the dataset
-spikes_naive <- assay(altExp(sce_naive, "spike-ins"))
-spikes_active <- assay(altExp(sce_active, "spike-ins"))
-spikes_present <- rowSums(spikes_naive) != 0 & rowSums(spikes_active) != 0
-## Remove spike-ins that are not present from matrix and SCE object
-altExp(sce_naive, "spike-ins") <- altExp(sce_naive)[spikes_present, ]
-altExp(sce_active, "spike-ins") <- altExp(sce_active)[spikes_present, ]
-```
-
 
 Here, we update these objects in order to match the format required by 
 `r Biocpkg("BASiCS")`. Firstly, if multiple batches of sequenced cells are 
@@ -688,25 +684,8 @@ metadata(sce_active)$SpikeInput <- SpikeInput
 
 ## BASiCS analysis - running the MCMC
 
-TBC
-
-## BASiCS analysis - convergence diagnostics
-
-TBC
-
-## Single condition example: Naive CD4^+^ T cells {#Tcells-single}
-
-To highlight the use of BASiCS to analyse cells in the single-condition case,
-we select naive CD4^+^ T cells of young B6 animals.
-Here, BASiCS can be used to identify highly- and lowly-variable genes and 
-calculate interpretable gene- and cell-specific parameters.
-Among others, these include gene-specific parameters for mean expression, 
-over-dispersion (biological variability) and residual over-dispersion 
-(biological variability after correcting for the confounding of mean and
-over-dispersion).
-
-### Running MCMC
-
+<!--- This text in this section has not been edited; 
+mostly focusing on structural changes for now --->
 It is recommended to run the `BASiCS_MCMC` sampler for at least 40,000 
 iterations to ensure convergence.
 However, if datasets are large and each condition contains hundreds of cells 
@@ -719,15 +698,7 @@ distribution to draw inference from. Therefore, unless the sampler has converged
 and produced an adequate number of samples (typically 1,000 or more), the 
 results of MCMC may be biased or unreliable.
 
-Here, we run the MCMC sampler for 40,000 iterations, discaring the initial 
-20,000 samples as burn-in, and using thinning factor of 20,
-such that only each 20^th^ sample is stored for later use.
-Since the dataset contains spike-in molecules, we run the sampler with 
-`WithSpikes = TRUE`. Given that we also want to correct for the mean-variance
-trend, we specify `Regression = TRUE`.
-For further information see [Methods](#methods).
-
-```{r MCMC-naive, eval = FALSE}
+```{r MCMC-run, eval = FALSE}
 MCMC_naive <- BASiCS_MCMC(
   Data = sce_naive,
   PrintProgress = FALSE,
@@ -735,7 +706,23 @@ MCMC_naive <- BASiCS_MCMC(
   Thin = 20,
   Burn = 20000,
   Regression = TRUE,
-  WithSpikes = TRUE
+  WithSpikes = TRUE,
+  StoreChains = TRUE, 
+  StoreDir = "rds/", 
+  RunName = "naive"
+)
+
+MCMC_active <- BASiCS_MCMC(
+  Data = sce_active,
+  PrintProgress = FALSE,
+  N = 40000,
+  Thin = 20,
+  Burn = 20000,
+  Regression = TRUE,
+  WithSpikes = TRUE,
+  StoreChains = TRUE, 
+  StoreDir = "rds/", 
+  RunName = "active"
 )
 ```
 
@@ -753,7 +740,14 @@ if (!file.exists("rds/MCMC_naive.rds")) {
     destfile = "rds/MCMC_naive.rds"
   )  
 }
+if (!file.exists("rds/MCMC_active.rds")) {
+  download.file(
+    "https://git.ecdf.ed.ac.uk/vallejosgroup/basicsworkflow2020/raw/master/MCMC_active.rds",
+    destfile = "rds/MCMC_active.rds"
+  )  
+}
 MCMC_naive <- readRDS("rds/MCMC_naive.rds")
+MCMC_active <- readRDS("rds/MCMC_active.rds")
 ```
 
 The `BASiCS_Chain` object contains a list of matrices that store the 
@@ -773,7 +767,26 @@ we obtained 1,000 draws for each parameter, stored in the `BASiCS_Chain` object:
 
 ```{r dim-displayChainBASiCS}
 dim(displayChainBASiCS(MCMC_naive, Param = "mu"))
+dim(displayChainBASiCS(MCMC_active, Param = "mu"))
 ```
+
+## BASiCS analysis - convergence diagnostics
+
+TBC
+
+## Single condition example: Naive CD4^+^ T cells {#Tcells-single}
+
+To highlight the use of BASiCS to analyse cells in the single-condition case,
+we select naive CD4^+^ T cells of young B6 animals.
+Here, BASiCS can be used to identify highly- and lowly-variable genes and 
+calculate interpretable gene- and cell-specific parameters.
+Among others, these include gene-specific parameters for mean expression, 
+over-dispersion (biological variability) and residual over-dispersion 
+(biological variability after correcting for the confounding of mean and
+over-dispersion).
+
+
+
 
 ### Assessing MCMC convergence {#naive-convergence}
 
